--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: articles
+layout: main
 titles:
   # @start locale config
   en      : &EN       Home
@@ -9,7 +9,8 @@ titles:
   en-AU   : *EN
 show_title: false
 articles:
-  data_source: paginator.posts
+  data_source_1: paginator.sample
+  date_source_2: paginator.newsletter
   article_type: BlogPosting
   show_cover: false
   show_excerpt: true
