--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 
 <footer class="footer py-4 js-page-footer">
   <div class="main">
-    <center><a>Click here</a> to contribute an article to learn-pip-trends.com</center>
+    <center><a href = "/contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
     
     {%- assign _site_author = site.author -%}
     {%- if _site_author.type == 'organization' -%}
