--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,6 +59,7 @@
     "additional/alert",
     "additional/tag",
     "additional/photo-frame",
+    "additional/editor",
 
     "layout/base",
     "layout/page",
