--- a/_layouts/editor.html
+++ b/_layouts/editor.html
@@ -2,7 +2,7 @@
 layout: article
 ---
 {{content}}
-<script src="\assets\ckeditor\ckeditor.js"></script>
+<script src="./assets/ckeditor/ckeditor.js"></script>
 <form action="https://formspree.io/f/mbjvdgjg" method="POST" enctype="multipart/form-data">
     <label for="article-title">Article Title:</label>
     <input name="article-title" type="text" id="article-title">
@@ -43,7 +43,7 @@ layout: article
     <strong>Agreement:</strong>
     By submitting this article, you agree that it is original content created by you, and you grant learn-pip-trends
     the right to edit and publish the article on our website. You also confirm that you have read and understood the
-    <a href="contributing">contributing guidelines.</a>
+    <a href="./contributing">contributing guidelines.</a>
     <br>
     Thank you for contributing to the Python community and helping us share valuable knowledge about pip and Python
     packaging! We look forward to reviewing your submission.
