--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,11 @@ titles:
   en-AU   : *EN
 show_title: false
 articles:
-  data_source_1: paginator.sample
-  date_source_2: paginator.newsletter
+  data_source_1: paginator.gettingstarted
+  date_source_2: paginator.sample
+  data_source_3: paginator.course
+  data_source_4: paginator.blog
+  data_source_5: paginator.newsletter
   article_type: BlogPosting
   show_cover: false
   show_excerpt: true
