--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -57,18 +57,14 @@ $red:             #f5222d;
 $text-color-function: #fff;
 
 // logo colors
-$mail-color:       #0072c5;
-$facebook-color:   #4267b2;
-$twitter-color:    #1da1f2;
-$weibo-color:      #e6162d;
-$google-plus-color:#ea4335;
-$telegram-color:   #32afed;
-$medium-color:     #000;
-$zhihu-color:      #0084ff;
-$douban-color:     #42bd56;
-$linkedin-color:   #1074af;
+$mail-color:       	#fd3a03;
+$facebook-color:   #006dfe	;
+$twitter-color:    #111111;
+$instagram-color: #fe086c;
+$youtube-color:      #FF0000;
+$linkedin-color:   #0077b5;
 $github-color:     #000;
-$npm-color:        #fff;
+$discord-color: #7289da;
 
 // highlight colors
 @import "skins/highlight/tomorrow";
