--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -44,57 +44,25 @@
       </li>
     {%- endif -%}
 
-    {%- if _author.weibo -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Weibo' }}">
-        <a class="button button--circle weibo-button" itemprop="sameAs" href="https://weibo.com/{{ _author.weibo }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/weibo.svg -%}</div>
+    {%- if _author.youtube -%}
+      <li title="{{ _locale_string_follow | replace: '[NAME]', 'youtube' }}">
+        <a class="button button--circle youtube-button" itemprop="sameAs" href="https://www.youtube.com/{{ _author.youtube }}" target="_blank">
+          <div class="icon">{%- include svg/icon/social/youtube.svg -%}</div>
         </a>
       </li>
     {%- endif -%}
 
-    {%- if _author.googleplus -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Google+' }}">
-        <a class="button button--circle googlepluse-button" itemprop="sameAs" href="https://plus.google.com/u/0/{{ _author.googleplus }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/googleplus.svg -%}</div>
-        </a>
-      </li>
-    {%- endif -%}
-
-    {%- if _author.telegram -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Telegram' }}">
-        <a class="button button--circle telegram-button" itemprop="sameAs" href="https://t.me/{{ _author.telegram }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/telegram.svg -%}</div>
-        </a>
-      </li>
-    {%- endif -%}
-
-    {%- if _author.medium -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Medium' }}">
-        <a class="button button--circle medium-button" itemprop="sameAs" href="https://medium.com/{{ _author.medium }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/medium.svg -%}</div>
-        </a>
-      </li>
-    {%- endif -%}
-
-    {%- if _author.zhihu -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Zhihu' }}">
-        <a class="button button--circle zhihu-button" itemprop="sameAs" href="https://www.zhihu.com/people/{{ _author.zhihu }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/zhihu.svg -%}</div>
-        </a>
-      </li>
-    {%- endif -%}
-
-    {%- if _author.douban -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Douban' }}">
-        <a class="button button--circle douban-button" itemprop="sameAs" href="https://www.douban.com/people/{{ _author.douban }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/douban.svg -%}</div>
+    {%- if _author.instagram -%}
+      <li title="{{ _locale_string_follow | replace: '[NAME]', 'instagram' }}">
+        <a class="button button--circle instagram-button" itemprop="sameAs" href="https://www.instagram.com/{{ _author.instagram }}" target="_blank">
+          <div class="icon">{%- include svg/icon/social/instagram.svg -%}</div>
         </a>
       </li>
     {%- endif -%}
 
     {%- if _author.linkedin -%}
       <li title="{{ _locale_string_follow | replace: '[NAME]', 'Linkedin' }}">
-        <a class="button button--circle linkedin-button" itemprop="sameAs" href="https://www.linkedin.com/in/{{ _author.linkedin }}" target="_blank">
+        <a class="button button--circle linkedin-button" itemprop="sameAs" href="https://www.linkedin.com/company/{{ _author.linkedin }}" target="_blank">
           <div class="icon">{%- include svg/icon/social/linkedin.svg -%}</div>
         </a>
       </li>
@@ -108,10 +76,10 @@
       </li>
     {%- endif -%}
 
-    {%- if _author.npm -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'npm' }}">
-        <a class="button button--circle npm-button" itemprop="sameAs" href="https://www.npmjs.com/~{{ _author.npm }}" target="_blank">
-          <div class="icon">{%- include svg/icon/social/npm.svg -%}</div>
+    {%- if _author.discord -%}
+      <li title="{{ _locale_string_follow | replace: '[NAME]', 'discord' }}">
+        <a class="button button--circle discord-button" itemprop="sameAs" href="https://www.discord.gg/~{{ _author.discord }}" target="_blank">
+          <div class="icon">{%- include svg/icon/social/discord.svg -%}</div>
         </a>
       </li>
     {%- endif -%}
