--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 <br>
-<h1> New Items - </h1>
+<h1> New Articles to Get Started with - </h1>
 
 {%- assign _page_articles_data_source_1 = page.articles.data_source_1 | default: layout.articles.data_source_1 -%}
 
@@ -35,60 +35,63 @@ layout: page
 
 {%- if _articles -%}
 
-  <div class="layout--articles--1">
+<div class="layout--articles--1">
 
-    {%- if _type == 'grid' -%}
-      {%- if page.articles.size == 'sm' -%}
-        {%- include article-list.html articles=_articles type='grid' size='sm' -%}
-      {%- else -%}
-        {%- include article-list.html articles=_articles type='grid' -%}
-      {%- endif -%}
+  {%- assign _sorted_articles = _articles | sort: 'date' | reverse -%}
+  {%- assign _limited_articles = _sorted_articles | limit: 1 -%} 
 
-    {%- elsif _type == 'brief' -%}
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_info
-        source0=layout.articles.show_info source1=page.articles.show_info -%}
-      {%- assign _show_info = __return -%}
-
-      {%- include article-list.html articles=_articles type='brief' show_info=_show_info -%}
-
+  {%- if _type == 'grid' -%}
+    {%- if page.articles.size == 'sm' -%}
+      {%- include article-list.html articles=_limited_articles type='grid' size='sm' -%}
     {%- else -%}
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_cover
-        source0=layout.articles.show_cover source1=page.articles.show_cover -%}
-      {%- assign _show_cover = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_excerpt
-        source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
-      {%- assign _show_excerpt = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_readmore
-        source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
-      {%- assign _show_readmore = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_info
-        source0=layout.articles.show_info source1=page.articles.show_info -%}
-      {%- assign _show_info = __return -%}
-
-      {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
-      {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
-      {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
-
-      {%- include article-list.html articles=_articles type='item'
-        article_type=_article_type
-        show_cover=_show_cover cover_size=_cover_size
-        show_excerpt=_show_excerpt excerpt_type=_excerpt_type
-        show_readmore=_show_readmore show_info=_show_info -%}
-
+      {%- include article-list.html articles=_limited_articles type='grid' -%}
     {%- endif -%}
 
-  </div>
+  {%- elsif _type == 'brief' -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- include article-list.html articles=_limited_articles type='brief' show_info=_show_info -%}
+
+  {%- else -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_cover
+      source0=layout.articles.show_cover source1=page.articles.show_cover -%}
+    {%- assign _show_cover = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_excerpt
+      source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
+    {%- assign _show_excerpt = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_readmore
+      source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
+    {%- assign _show_readmore = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
+    {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
+    {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
+
+    {%- include article-list.html articles=_limited_articles type='item'
+      article_type=_article_type
+      show_cover=_show_cover cover_size=_cover_size
+      show_excerpt=_show_excerpt excerpt_type=_excerpt_type
+      show_readmore=_show_readmore show_info=_show_info -%}
+
+  {%- endif -%}
+
+</div>
 {%- endif -%}
 
-<h1> New Blogs - </h1>
+<h1> New Sample Code - </h1>
 
 {%- assign _page_articles_data_source_2 = page.articles.data_source_2 | default: layout.articles.data_source_2 -%}
 
@@ -121,56 +124,326 @@ layout: page
 
 {%- if _articles -%}
 
-  <div class="layout--articles--2">
+<div class="layout--articles--1">
 
-    {%- if _type == 'grid' -%}
-      {%- if page.articles.size == 'sm' -%}
-        {%- include article-list.html articles=_articles type='grid' size='sm' -%}
-      {%- else -%}
-        {%- include article-list.html articles=_articles type='grid' -%}
-      {%- endif -%}
+  {%- assign _sorted_articles = _articles | sort: 'date' | reverse -%}
+  {%- assign _limited_articles = _sorted_articles | limit: 1 -%} 
 
-    {%- elsif _type == 'brief' -%}
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_info
-        source0=layout.articles.show_info source1=page.articles.show_info -%}
-      {%- assign _show_info = __return -%}
-
-      {%- include article-list.html articles=_articles type='brief' show_info=_show_info -%}
-
+  {%- if _type == 'grid' -%}
+    {%- if page.articles.size == 'sm' -%}
+      {%- include article-list.html articles=_limited_articles type='grid' size='sm' -%}
     {%- else -%}
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_cover
-        source0=layout.articles.show_cover source1=page.articles.show_cover -%}
-      {%- assign _show_cover = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_excerpt
-        source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
-      {%- assign _show_excerpt = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_readmore
-        source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
-      {%- assign _show_readmore = __return -%}
-
-      {%- include snippets/assign.html
-        target=site.data.variables.default.page.articles.show_info
-        source0=layout.articles.show_info source1=page.articles.show_info -%}
-      {%- assign _show_info = __return -%}
-
-      {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
-      {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
-      {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
-
-      {%- include article-list.html articles=_articles type='item'
-        article_type=_article_type
-        show_cover=_show_cover cover_size=_cover_size
-        show_excerpt=_show_excerpt excerpt_type=_excerpt_type
-        show_readmore=_show_readmore show_info=_show_info -%}
-
+      {%- include article-list.html articles=_limited_articles type='grid' -%}
     {%- endif -%}
 
-  </div>
+  {%- elsif _type == 'brief' -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- include article-list.html articles=_limited_articles type='brief' show_info=_show_info -%}
+
+  {%- else -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_cover
+      source0=layout.articles.show_cover source1=page.articles.show_cover -%}
+    {%- assign _show_cover = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_excerpt
+      source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
+    {%- assign _show_excerpt = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_readmore
+      source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
+    {%- assign _show_readmore = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
+    {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
+    {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
+
+    {%- include article-list.html articles=_limited_articles type='item'
+      article_type=_article_type
+      show_cover=_show_cover cover_size=_cover_size
+      show_excerpt=_show_excerpt excerpt_type=_excerpt_type
+      show_readmore=_show_readmore show_info=_show_info -%}
+
+  {%- endif -%}
+
+</div>
 {%- endif -%}
 
+
+<h1> New Courses - </h1>
+
+{%- assign _page_articles_data_source_3 = page.articles.data_source_3 | default: layout.articles.data_source_3 -%}
+
+{%- if _page_articles_data_source_3 -%}
+{%- assign _keys = _page_articles_data_source_3 | split: '.' -%}
+{%- endif -%}
+
+{%- assign _articles = nil -%}
+{%- for _key in _keys -%}
+  {%- if forloop.first -%}
+    {%- case _key -%}
+      {%- when 'site' -%}
+        {%- assign _articles = site -%}
+      {%- when 'page' -%}
+        {%- assign _articles = page -%}
+      {%- when 'layout' -%}
+        {%- assign _articles = layout -%}
+      {%- when 'paginator' -%}
+        {%- assign _articles = paginator -%}
+      {%- else -%}
+        {%- assign _articles = site[_key] -%}
+      {%- else -%}
+    {%- endcase -%}
+  {%- else -%}
+    {%- assign _articles = _articles[_key] -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- assign _type = page.articles.type | default: layout.articles.type -%}
+
+{%- if _articles -%}
+
+<div class="layout--articles--1">
+
+  {%- assign _sorted_articles = _articles | sort: 'date' | reverse -%}
+  {%- assign _limited_articles = _sorted_articles | limit: 1 -%} 
+
+  {%- if _type == 'grid' -%}
+    {%- if page.articles.size == 'sm' -%}
+      {%- include article-list.html articles=_limited_articles type='grid' size='sm' -%}
+    {%- else -%}
+      {%- include article-list.html articles=_limited_articles type='grid' -%}
+    {%- endif -%}
+
+  {%- elsif _type == 'brief' -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- include article-list.html articles=_limited_articles type='brief' show_info=_show_info -%}
+
+  {%- else -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_cover
+      source0=layout.articles.show_cover source1=page.articles.show_cover -%}
+    {%- assign _show_cover = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_excerpt
+      source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
+    {%- assign _show_excerpt = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_readmore
+      source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
+    {%- assign _show_readmore = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
+    {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
+    {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
+
+    {%- include article-list.html articles=_limited_articles type='item'
+      article_type=_article_type
+      show_cover=_show_cover cover_size=_cover_size
+      show_excerpt=_show_excerpt excerpt_type=_excerpt_type
+      show_readmore=_show_readmore show_info=_show_info -%}
+
+  {%- endif -%}
+
+</div>
+{%- endif -%}
+
+<h1> New Blogs - </h1>
+
+{%- assign _page_articles_data_source_4 = page.articles.data_source_4 | default: layout.articles.data_source_4 -%}
+
+{%- if _page_articles_data_source_4 -%}
+{%- assign _keys = _page_articles_data_source_4 | split: '.' -%}
+{%- endif -%}
+
+{%- assign _articles = nil -%}
+{%- for _key in _keys -%}
+  {%- if forloop.first -%}
+    {%- case _key -%}
+      {%- when 'site' -%}
+        {%- assign _articles = site -%}
+      {%- when 'page' -%}
+        {%- assign _articles = page -%}
+      {%- when 'layout' -%}
+        {%- assign _articles = layout -%}
+      {%- when 'paginator' -%}
+        {%- assign _articles = paginator -%}
+      {%- else -%}
+        {%- assign _articles = site[_key] -%}
+      {%- else -%}
+    {%- endcase -%}
+  {%- else -%}
+    {%- assign _articles = _articles[_key] -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- assign _type = page.articles.type | default: layout.articles.type -%}
+
+{%- if _articles -%}
+
+<div class="layout--articles--1">
+
+  {%- assign _sorted_articles = _articles | sort: 'date' | reverse -%}
+  {%- assign _limited_articles = _sorted_articles | limit: 1 -%} 
+
+  {%- if _type == 'grid' -%}
+    {%- if page.articles.size == 'sm' -%}
+      {%- include article-list.html articles=_limited_articles type='grid' size='sm' -%}
+    {%- else -%}
+      {%- include article-list.html articles=_limited_articles type='grid' -%}
+    {%- endif -%}
+
+  {%- elsif _type == 'brief' -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- include article-list.html articles=_limited_articles type='brief' show_info=_show_info -%}
+
+  {%- else -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_cover
+      source0=layout.articles.show_cover source1=page.articles.show_cover -%}
+    {%- assign _show_cover = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_excerpt
+      source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
+    {%- assign _show_excerpt = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_readmore
+      source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
+    {%- assign _show_readmore = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
+    {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
+    {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
+
+    {%- include article-list.html articles=_limited_articles type='item'
+      article_type=_article_type
+      show_cover=_show_cover cover_size=_cover_size
+      show_excerpt=_show_excerpt excerpt_type=_excerpt_type
+      show_readmore=_show_readmore show_info=_show_info -%}
+
+  {%- endif -%}
+
+</div>
+{%- endif -%}
+
+<h1> New Newsletters - </h1>
+
+{%- assign _page_articles_data_source_5 = page.articles.data_source_5 | default: layout.articles.data_source_5 -%}
+
+{%- if _page_articles_data_source_5 -%}
+{%- assign _keys = _page_articles_data_source_5 | split: '.' -%}
+{%- endif -%}
+
+{%- assign _articles = nil -%}
+{%- for _key in _keys -%}
+  {%- if forloop.first -%}
+    {%- case _key -%}
+      {%- when 'site' -%}
+        {%- assign _articles = site -%}
+      {%- when 'page' -%}
+        {%- assign _articles = page -%}
+      {%- when 'layout' -%}
+        {%- assign _articles = layout -%}
+      {%- when 'paginator' -%}
+        {%- assign _articles = paginator -%}
+      {%- else -%}
+        {%- assign _articles = site[_key] -%}
+      {%- else -%}
+    {%- endcase -%}
+  {%- else -%}
+    {%- assign _articles = _articles[_key] -%}
+  {%- endif -%}
+{%- endfor -%}
+
+{%- assign _type = page.articles.type | default: layout.articles.type -%}
+
+{%- if _articles -%}
+
+<div class="layout--articles--1">
+
+  {%- assign _sorted_articles = _articles | sort: 'date' | reverse -%}
+  {%- assign _limited_articles = _sorted_articles | limit: 1 -%} 
+
+  {%- if _type == 'grid' -%}
+    {%- if page.articles.size == 'sm' -%}
+      {%- include article-list.html articles=_limited_articles type='grid' size='sm' -%}
+    {%- else -%}
+      {%- include article-list.html articles=_limited_articles type='grid' -%}
+    {%- endif -%}
+
+  {%- elsif _type == 'brief' -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- include article-list.html articles=_limited_articles type='brief' show_info=_show_info -%}
+
+  {%- else -%}
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_cover
+      source0=layout.articles.show_cover source1=page.articles.show_cover -%}
+    {%- assign _show_cover = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_excerpt
+      source0=layout.articles.show_excerpt source1=page.articles.show_excerpt -%}
+    {%- assign _show_excerpt = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_readmore
+      source0=layout.articles.show_readmore source1=page.articles.show_readmore -%}
+    {%- assign _show_readmore = __return -%}
+
+    {%- include snippets/assign.html
+      target=site.data.variables.default.page.articles.show_info
+      source0=layout.articles.show_info source1=page.articles.show_info -%}
+    {%- assign _show_info = __return -%}
+
+    {%- assign _article_type = page.articles.article_type | default: layout.articles.article_type -%}
+    {%- assign _cover_size = page.articles.cover_size | default: layout.articles.cover_size -%}
+    {%- assign _excerpt_type = page.articles.excerpt_type | default: layout.articles.excerpt_type -%}
+
+    {%- include article-list.html articles=_limited_articles type='item'
+      article_type=_article_type
+      show_cover=_show_cover cover_size=_cover_size
+      show_excerpt=_show_excerpt excerpt_type=_excerpt_type
+      show_readmore=_show_readmore show_info=_show_info -%}
+
+  {%- endif -%}
+
+</div>
+{%- endif -%}
