--- a/_sass/components/_author-links.scss
+++ b/_sass/components/_author-links.scss
@@ -11,23 +11,11 @@
       .twitter-button {
         @include clickable($text-color-1, $twitter-color);
       }
-      .weibo-button {
-        @include clickable($text-color-1, $weibo-color);
+      .instagram-button {
+        @include clickable($text-color-1, $instagram-color);
       }
-      .googlepluse-button {
-        @include clickable($text-color-1, $google-plus-color);
-      }
-      .telegram-button {
-        @include clickable($text-color-1, $telegram-color);
-      }
-      .medium-button {
-        @include clickable($text-color-1, $medium-color);
-      }
-      .zhihu-button {
-        @include clickable($text-color-1, $zhihu-color);
-      }
-      .douban-button {
-        @include clickable($text-color-1, $douban-color);
+      .youtube-button {
+        @include clickable($text-color-1, $youtube-color);
       }
       .linkedin-button {
         @include clickable($text-color-1, $linkedin-color);
@@ -35,8 +23,8 @@
       .github-button {
         @include clickable($text-color-1, $github-color);
       }
-      .npm-button {
-        @include clickable($text-color-1, $npm-color);
+      .discord-button {
+        @include clickable($text-color-1, $discord-color);
       }
     }
   }
