--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -13,7 +13,11 @@ titles:
 <div class="layout--archive js-all">
   {%- include tags.html -%}
   <div class="js-result layout--archive__result d-none">
-    {%- include article-list.html articles=site.posts type='brief' show_info=true reverse=true group_by='year' -%}
+    {%- include article-list.html articles=site.gettingstarted type='brief' show_info=true reverse=true group_by='year' -%}
+    {%- include article-list.html articles=site.samplecode type='brief' show_info=true reverse=true group_by='year' -%}
+    {%- include article-list.html articles=site.course type='brief' show_info=true reverse=true group_by='year' -%}
+    {%- include article-list.html articles=site.blog type='brief' show_info=true reverse=true group_by='year' -%}
+    {%- include article-list.html articles=site.newsletter type='brief' show_info=true reverse=true group_by='year' -%}
   </div>
 </div>
 
