--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,3 +1,4 @@
+{% assign merged_pages = site.gettingstarted | append: site.samplecode | append: site.course | append: site.blog | append: site.newsletter %}
 {%- assign _tag_max_size = 1 -%}
 {%- assign _tag_min_size = 1 -%}
 {%- assign _tag_cur_size = 1 -%}
@@ -19,7 +20,7 @@
   <ul class="menu">
     <li>
       <button type="button" class="button button--secondary button--pill tag-button tag-button--all" data-encode="">
-        Show All<div class="tag-button__count">{{ site.posts | size }}</div>
+        Show All<div class="tag-button__count">{{ merged_pages | size }}</div>
       </button>
     </li>
     {%- for _tag in _tags -%}
