--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,5 +22,6 @@ layout: none
     <script>
       {%- include scripts/common.js -%}
     </script>
+    <script id="dsq-count-scr" src="//learn-pip-trends-1.disqus.com/count.js" async></script>
   </body>
 </html>
