--- a/_includes/aside/toc.html
+++ b/_includes/aside/toc.html
@@ -1,1 +1,8 @@
-<div class="toc-aside js-toc-root"></div>
+<div>
+    <div class="toc-aside js-toc-root">
+
+    </div>
+    <div class="contribute-box">
+        <p><a href="../../contribute" class="contribute-button">Contribute an Article</a></p>
+    </div>
+</div>
