--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -5,15 +5,19 @@ layout: none
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0;url= index.html">
+  <meta http-equiv="refresh" content="0;url=./">
   <title>{{ page.title }}</title>
   <script type="text/javascript">
     window.addEventListener("DOMContentLoaded", function() {
-      var a = document.createElement("a");
-      a.href = "{{ page.redirect_url }}";
-      a.target = "_blank";
-      a.click();
+      if (!window.redirected) {
+        window.redirected = true;
+        var a = document.getElementById("redirect_link");
+        a.click();
+      }
     });
   </script>
 </head>
+<body>
+    <a href="{{ page.redirect_url }}" target="_blank" id="redirect_link">redirect link</a>
+</body>
 </html>
