Change iframe dimensions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="main">
     <center><a href = "../contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
     <center>
-      <iframe src="https://piptrends.substack.com/embed" width="60%" height="35%" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://piptrends.substack.com/embed" width="350" height="290" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
     </center>
     
     {%- assign _site_author = site.author -%}
