Update substack signup form

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
   <div class="main">
     <center><a href = "../contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
     <center>
-      <iframe src="https://piptrends.substack.com/embed" width="350" height="290" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
+      <p>Join our mailing list. Subscribe to pip Trends Weekly Newsletter.</p>
+      <iframe src="https://piptrends.substack.com/embed" width="350" height="120" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
     </center>
     
     {%- assign _site_author = site.author -%}
