Change footer text, remove newsletter box from sidebar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="main">
     <center><a href = "../contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
     <center>
-      <p>Join our mailing list. Subscribe to pip Trends Weekly Newsletter.</p>
+      <p>Stay Ahead of the Curve: Get the Pip Trends Weekly Digest!</p>
       <iframe src="https://piptrends.substack.com/embed" width="350" height="120" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
     </center>
     
