Remove newsletter collections and newsletter section on homepage

--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,4 +1,4 @@
-{% assign merged_pages = site.gettingstarted | append: site.samplecode | append: site.course | append: site.blog | append: site.newsletter %}
+{% assign merged_pages = site.gettingstarted | append: site.samplecode | append: site.course | append: site.blog %}
 {%- assign _tag_max_size = 1 -%}
 {%- assign _tag_min_size = 1 -%}
 {%- assign _tag_cur_size = 1 -%}
