--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-
-<footer class="footer py-4 js-page-footer">
+<hr>
+<footer class="footer py-4 js-page-footer" >
   <div class="main">
     <center><a href = "../contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
     <center>
-      <p>Stay Ahead of the Curve: Get the Pip Trends Weekly Digest!</p>
-      <iframe src="https://piptrends.substack.com/embed" width="350" height="120" style="background:#f2f2f2;" frameborder="0" scrolling="no"></iframe>
+      <p style="padding-top:2%;">Stay Ahead of the Curve: Get the Pip Trends Weekly Digest!</p>
+      <iframe src="https://piptrends.substack.com/embed" width="100%" height="180px" style="background:#ffffff;" frameborder="0" scrolling="no"></iframe>
     </center>
     
     {%- assign _site_author = site.author -%}
