--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -40,7 +40,7 @@ $header-text-color: $text-color-3;
 $header-background: $main-color-3;
 
 $footer-text-color: $text-color-3;
-$footer-background: $background-color;
+$footer-background: $main-color-3;
 
 // border and shadow colors
 $border-color:     mix(#000, $background-color, 20%);
