--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,11 @@
         </div>
         {%- if site.search.provider -%}
           <button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button>
+          {% include text-expand.html %}
         {%- endif -%}
       </div>
       {%- if site.data.navigation.header -%}
+      <div id ="menu">
       <nav class="navigation">
         <ul>
           {%- for _item in site.data.navigation.header -%}
@@ -39,6 +41,7 @@
           {%- endif -%}
         </ul>
       </nav>
+    </div>
       {%- endif -%}
     </div>
   </header>
