--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -15,7 +15,7 @@
 
 .header--dark {
   @extend .text--dark;
-  background: rgba(#000, .15);
+  background: rgba(#000, 0.15);
   .navigation__item--active {
     &::after {
       @include split-line(bottom, 4px, $text-color-theme-dark);
@@ -25,7 +25,7 @@
 
 .header--light {
   @extend .text--light;
-  background: rgba(#fff, .15);
+  background: rgba(#fff, 0.15);
   .navigation__item--active {
     &::after {
       @include split-line(bottom, 4px, $text-color-theme-light);
@@ -119,5 +119,34 @@
   }
   &::after {
     @include split-line(bottom, 4px, $main-color-1);
+  }
+}
+
+#togglemenu {
+  display: none;
+  cursor: pointer;
+}
+@media (max-width: 880px) {
+  #togglemenu {
+    display: block;
+  }
+  #menu ul {
+    display: none;
+  }
+  .menuopen #menu ul {
+    display: block;
+  }
+}
+
+.menuopen #menu {
+  display: block;
+}
+@media only screen and (max-width: 55rem) {
+  .navigation {
+    display: none;
+  }
+
+  .menuopen .navigation {
+    display: block;
   }
 }
