--- a/_sass/components/_article-info.scss
+++ b/_sass/components/_article-info.scss
@@ -10,15 +10,25 @@
   .right-col {
     float: right;
     margin-left: map-get($button, padding-x-sm);
+    
     @include media-breakpoint-down(md) {
       float: none;
     }
+  
     & > li {
       &:not(:last-child) {
         @include split-line(right, default, $text-color-l);
         padding-right: map-get($spacers, 2);
         margin-right: map-get($spacers, 2);
         line-height: map-get($base, line-height-xs);
+      }
+  
+      img {
+        display: inline-block; 
+        width: 15px; 
+        height: 15px; 
+        vertical-align: middle; 
+        margin-right: 5px; 
       }
     }
   }
