Replace excerpt to description in  article list

--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -57,12 +57,12 @@
         <div class="item__content">
           <header><a href="{{ _article_url }}"><h2 itemprop="headline" class="item__header">{{ _article.title }}</h2></a></header>
           <div class="item__description">
-            {%- if _article.excerpt and include.show_excerpt -%}
+            {%- if _article.description and include.show_excerpt -%}
               <div class="article__content" itemprop="description articleBody">
                 {%- if _excerpt_type == 'html' -%}
-                  {{ _article.excerpt }}
+                  {{ _article.description }}
                 {%- else -%}
-                  {{ _article.excerpt | strip_html | strip | truncate: _excerpt_truncate }}
+                  {{ _article.description | strip_html | strip | truncate: _excerpt_truncate }}
                 {%- endif -%}
               </div>
             {%- endif -%}
