--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -66,14 +66,14 @@
             {%- if _author.picture -%}
               <li><img src="{{ _author.picture }}"> <span>{{ _author.name }}</span></li>
             {%- else -%}
-              <li><i class="fas fa-user"></i> <span>{{ _author.name }}</span></li>
+              <li><i class="fa fa-user"></i> <span>{{ _author.name }}</span></li>
             {%- endif -%}
           {%- endif -%}
 
           {%- if _show_date -%}
             <li>
               {%- include snippets/get-locale-string.html key='ARTICLE_DATE_FORMAT' -%}
-              <i class="far fa-calendar-alt"></i> <span>{{ include.article.date | date: __return }}</span>
+              <i class="fa fa-calendar-alt"></i> <span>{{ include.article.date | date: __return }}</span>
             </li>
           {%- endif -%}
 
@@ -81,7 +81,7 @@
             {%- if site.pageview.provider -%}
               {%- include snippets/get-locale-string.html key='VIEWS' -%}
               {%- assign _locale_views = __return -%}
-              <li><i class="far fa-eye"></i> <span class="js-pageview" data-page-key="{{ include.article.key }}">0</span> {{ _locale_views }}</li>
+              <li><i class="fa fa-eye"></i> <span class="js-pageview" data-page-key="{{ include.article.key }}">0</span> {{ _locale_views }}</li>
             {%- endif -%}
           {%- endif -%}
         </ul>
