--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -23,7 +23,7 @@
     {%- if _author.email -%}
       <li title="{{ _locale_string_email }}">
       <a class="button button--circle mail-button" itemprop="email" href="mailto:{{ _author.email }}" target="_blank">
-        <i class="fas fa-envelope"></i>
+        <i class="fa fa-envelope"></i>
       </a>
     {%- endif -%}
 
