--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           {%- endif -%}
         </div>
         {%- if site.search.provider -%}
-          <button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button>
+          <button class="button button--secondary button--circle search-button js-search-toggle"><i class="fa fa-search"></i></button>
           {% include text-expand.html %}
         {%- endif -%}
       </div>
@@ -37,7 +37,7 @@
             {%- endif -%}
           {%- endfor -%}
           {%- if site.search.provider -%}
-            <li><button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button></li>
+            <li><button class="button button--secondary button--circle search-button js-search-toggle"><i class="fa fa-search"></i></button></li>
           {%- endif -%}
         </ul>
       </nav>
