--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@ layout: none
   <head>
     {%- include analytics.html -%}
     {%- include head.html -%}
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
       {%- include scripts/utils/utils.js -%}
       {%- include scripts/lib/throttle.js -%}
