--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,7 +36,7 @@ layout: base
   <div class="page__viewport">
     <div class="page__actions d-print-none">
       <div class="button button--circle button--lg box-shadow-2 sidebar-button js-sidebar-show">
-        <i class="fas fa-bars icon--show"></i>
+        <i class="fa fa-bars icon--show"></i>
       </div>
     </div>
 
