Modify Contribute Guidelines

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer py-4 js-page-footer">
   <div class="main">
-    <center><a href="../contribute">Click here</a> to contribute an article to learn-pip-trends.com</center>
+    <center><a href="../contribute">Click here</a> to contribute to learn-pip-trends.com</center>
     <center>
       <div style="background-color: #ffffff;">
         <p style="padding-top:2%;">Stay Ahead of the Curve: Get the Pip Trends
