--- a/_includes/aside/toc.html
+++ b/_includes/aside/toc.html
@@ -1,8 +1,7 @@
 <div>
     <div class="toc-aside js-toc-root">
-
     </div>
     <div class="contribute-box">
-        <p><a href="../../contribute" class="contribute-button">Contribute an Article</a></p>
+        <p><a href="../../contribute" class="contribute-button">Click here to Contribute</a></p>
     </div>
 </div>
