--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -47,7 +47,7 @@
 </footer>
 <footer class="md-footer">
     <br>
-    <center class="md-typeset footer"><a href="../contribute">Click here</a> to contribute to learn-pip-trends.com
+    <center class="md-typeset footer"><a href="https://learn.piptrends.com/contribute">Click here</a> to contribute to learn-pip-trends.com
         <div style="background-color: #ffffff;" class="embed-container">
             <p class="md-typeset embed">Stay Ahead of the Curve: Get the Pip Trends Weekly Digest!</p>
             <iframe src="https://piptrends.substack.com/embed" width="100%" height="200px" style="background:#f0f0f0;"
